--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -34,14 +34,13 @@
   border-radius: var(--border-radius);
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
+  display: flex;
+  flex-direction:row;
+  margin:0 auto;
+  justify-content: space-between;
+  grid-template-columns: repeat(3, minmax(25%, auto));
   max-width: var(--max-width);
   width: 100%;
 }
@@ -74,13 +73,19 @@
 
 .center {
   display: flex;
-  justify-content: center;
+  flex-direction:column;
+  justify-content: space-evenly;
   align-items: center;
   position: relative;
-  padding: 4rem 0;
 }
 
-.center::before {
+.center h1 {
+  font-size:56px;
+  margin-top:-150px;
+  margin-bottom:25px;
+}
+
+/* .center::before {
   background: var(--secondary-glow);
   border-radius: 50%;
   width: 480px;
@@ -100,12 +105,13 @@
   content: '';
   left: 50%;
   position: absolute;
-  filter: blur(45px);
   transform: translateZ(0);
-}
+} */
 
 .logo {
   position: relative;
+  background-color: rgba(100,100,100, 0.6);
+
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
